# MRTCore-LLVM

./: CMakeLists.txt  README.md  configure.bat  configure.sh  toolchain-amd64.cmake  toolchain-arm64.cmake  windres.cmake
MRM/: CMakeLists.txt  MRM.cpp  rsrc.rc
MRM/include/mrm/: Collections.h  MrmEnvironment.h
MRM/include/mrm/common/: Base.h  MrmProfileData.h  MrmTraceLogging.h  PlatformWin32.h
MRM/mrmmin/: BaseProviders.cpp  BaseQualifierTypes.cpp  BlobResultImpl.cpp  Checksums.cpp  CoreEnvironment.cpp  CoreProfile.cpp  CoreQualifierTypes.cpp  DecisionInfo.cpp  DecisionInfoBuilder.cpp  Environment.cpp  HNames.cpp  HSchema.cpp  ManagedFiles.cpp  Managers.cpp  MrmFile.cpp  MrmTraceLogging.cpp  PriFile.cpp  PriFileManager.cpp  Resolvers.cpp  ResourceLink.cpp  ResourceMap.cpp  ReverseMap.cpp  RtlProfile.cpp  SchemaCollection.cpp  StringResultImpl.cpp  UnifiedView.cpp  Util.cpp
wil/: CMakeLists.txt
wil/include/wil/: common.h  filesystem.h  result_macros.h  win32_helpers.h  wistd_config.h
